--- a/EpamGameStore/CapstoneProjectAPI/CapstoneProjectLibrary/CapstoneProjectLibrary.csproj
+++ b/EpamGameStore/CapstoneProjectAPI/CapstoneProjectLibrary/CapstoneProjectLibrary.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="fm.Extensions.Configuration.Json" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.30">
       <PrivateAssets>all</PrivateAssets>
@@ -15,6 +16,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NLog" Version="5.1.2" />
+    <PackageReference Include="NLog.Web" Version="5.2.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
   </ItemGroup>
 
