--- a/EpamGameStore/epam-gamestore/package.json
+++ b/EpamGameStore/epam-gamestore/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
   },
