--- a/EpamGameStore/epam-gamestore/package.json
+++ b/EpamGameStore/epam-gamestore/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.7.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
