--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,10 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: EpamGameStore/CapstoneProjectAPI
     - name: Build
       run: dotnet build --no-restore
+      working-directory: EpamGameStore/CapstoneProjectAPI
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: EpamGameStore/CapstoneProjectAPI
